logs/Slang/generated/hdlconv/hdlconvertor_p130.sv.log
name: hdlconvertor_p130
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p130.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p130.sv:7:11: error: language feature not yet supported
parameter type t_3 = int;
          ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p130.sv:7:22: error: expected expression
parameter type t_3 = int;
                     ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p130.sv:8:11: error: language feature not yet supported
parameter type t_4 = int;
          ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p130.sv:8:22: error: expected expression
parameter type t_4 = int;
                     ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p130.sv:10:17: error: 't_3' is not a type
t_1 v1; t_2 v2; t_3 v3; t_4 v4; t_5 v5;
                ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p130.sv:10:25: error: 't_4' is not a type
t_1 v1; t_2 v2; t_3 v3; t_4 v4; t_5 v5;
                        ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p130.sv:14:12: error: 't_6' does not refer to a value
sub #(.t_3(t_6)) s1 ();
           ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p130.sv:15:12: error: 't_6' does not refer to a value
sub #(.t_3(t_6)) s2 ();
           ^~~
